force-app/main/default/objects/Recalculation_Group__c/Recalculation_Group__c.object-meta.xml
<CustomObject>
    <label>Recalculation Group</label>
    <nameField>
        <label>Recalculation Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recalculation Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>