force-app/main/default/objects/Recalculation_Group__c/fields/Best_Value__c.field-meta.xml
<CustomField>
    <fullName>Best_Value__c</fullName>
    <description>to be replaced in real implementation</description>
    <label>Best Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>