force-app/main/default/objects/Recalculation_Group__c/fields/Bil__c.field-meta.xml
<CustomField>
    <fullName>Bil__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bil</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Recalculation Groups</relationshipLabel>
    <relationshipName>Recalculation_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>