force-app/main/default/objects/Recalculation_Group__c/fields/Last_Value__c.field-meta.xml
<CustomField>
    <fullName>Last_Value__c</fullName>
    <description>to be replaced in real implementation with lookup to Recalculation Result record</description>
    <label>Last Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>