force-app/main/default/objects/Recalculation_Group__c/fields/Sample_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Sample_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Vehicle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Vehicle__c.Recalculation_Group__c</field>
            <operation>equals</operation>
            <valueField>Vehicle__c.Recalculation_Group__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Recalculation Groups (Sample Vehicle)</relationshipLabel>
    <relationshipName>Recalculation_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>