force-app/main/default/objects/Recalculation_Group__c/fields/Sample_Vehicle_Current_Km__c.field-meta.xml
<CustomField>
    <fullName>Sample_Vehicle_Current_Km__c</fullName>
    <formula>Sample_Vehicle__r.Current_KM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Vehicle Current Km</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>