force-app/main/default/objects/Recalculation_Group__c/fields/Sample_Vehicle_Leasing_Period__c.field-meta.xml
<CustomField>
    <fullName>Sample_Vehicle_Leasing_Period__c</fullName>
    <formula>Sample_Vehicle__r.Leasing_Period_for_recalculation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Vehicle Leasing Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>