force-app/main/default/objects/Recalculation_Group__c/fields/Sample_Vehicle_Licence_Plate__c.field-meta.xml
<CustomField>
    <fullName>Sample_Vehicle_Licence_Plate__c</fullName>
    <formula>Sample_Vehicle__r.License_plate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Vehicle Licence Plate</label>
    <type>Text</type>
</CustomField>