force-app/main/default/objects/Recalculation_Group__c/fields/Sample_Vehicle_Ready_For_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>Sample_Vehicle_Ready_For_Recalculation__c</fullName>
    <formula>Sample_Vehicle__r.Ready_for_Recalculation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Vehicle Ready For Recalculation</label>
    <type>Checkbox</type>
</CustomField>