force-app/main/default/objects/Recalculation_Group__c/fields/Vehicle_Batch__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Batch</label>
    <referenceTo>vehicleBatch__c</referenceTo>
    <relationshipName>Recalculation_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>