force-app/main/default/objects/Recalculation_Group__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>VIN</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>