force-app/main/default/objects/Recalculation_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Vehicle_Batch__c</columns>
    <columns>NAME</columns>
    <columns>Sample_Vehicle__c</columns>
    <columns>VIN__c</columns>
    <columns>Sample_Vehicle_Leasing_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>